--- a/backend/infrastructure/authentication-service/src/main/resources/application.yml
+++ b/backend/infrastructure/authentication-service/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+server:
+  context-path: /uaa
+
+---
 spring:
   profiles: local
 
@@ -7,23 +11,25 @@ logging:
        springframework:
          security: DEBUG
 
-server:
-  context-path: /uaa
+---
+spring:
+  profiles: docker
   ssl:
     key-store: classpath:keystore.jks
     key-store-password: password
     key-password: password
 
 security:
-  oauth2:
-    client:
-      id: web
-      client-id: web
-      authorities:
-        - ROLE_CLIENT
-      authorized-grant-types: authorization_code,refresh_token,implicit,password,client_credentials
-      scope: read
-      client-secret: secret
-      resource-ids:
-        - apis
-      refresh-token-validity-seconds: 300
+  require_ssl: true
+#  oauth2:
+#    client:
+#      id: web
+#      client-id: web
+#      authorities:
+#        - ROLE_CLIENT
+#      authorized-grant-types: authorization_code,refresh_token,implicit,password,client_credentials
+#      scope: read
+#      client-secret: secret
+#      resource-ids:
+#        - apis
+#      refresh-token-validity-seconds: 300
