--- a/backend/infrastructure/authentication-service/src/main/resources/bootstrap.yml
+++ b/backend/infrastructure/authentication-service/src/main/resources/bootstrap.yml
@@ -5,9 +5,6 @@ spring:
     name: authentication-service
 
 eureka:
-  instance:
-    secure-port-enabled: true
-    secure-port: ${server.port:8899}
   client:
     serviceUrl:
       defaultZone: ${EUREKA_URL:http://localhost:8761}/eureka/
@@ -21,9 +18,11 @@ spring:
         - docker0
         - veth.*
         - 172.17.0.1
-#eureka:
-#  instance:
-#    preferIpAddress: false
+eureka:
+  instance:
+    secure-port-enabled: false
+    non-secure-port: ${server.port:8899}
+
 ---
 spring:
   profiles: docker
@@ -35,5 +34,7 @@ spring:
         serviceId: CONFIG-SERVER
 eureka:
   instance:
+    secure-port-enabled: true
+    secure-port: ${server.port:8899}
     preferIpAddress: true
 
