--- a/backend/order-module/order/src/main/resources/bootstrap.yml
+++ b/backend/order-module/order/src/main/resources/bootstrap.yml
@@ -1,6 +1,17 @@
 spring:
   application:
     name: order.moserp.org
+eureka:
+  instance:
+    nonSecurePort: ${server.port:9306}
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URL:http://localhost:8761}/eureka/
+
+---
+spring:
+  profiles: docker
   cloud:
     config:
       enabled: true
@@ -8,11 +19,3 @@ spring:
         enabled: true
         serviceId: CONFIG-SERVER
 
-eureka:
-  instance:
-    nonSecurePort: ${server.port:9301}
-    preferIpAddress: true
-    statusPageUrlPath: /structure
-  client:
-    serviceUrl:
-      defaultZone: ${EUREKA_URL:http://localhost:8761}/eureka/
