Backend: Renamed modules to "*-modules"

--- a/backend/environment-module/environment/src/main/resources/bootstrap.yml
+++ b/backend/environment-module/environment/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: environment.moserp.org
+    name: environment-module
 eureka:
   instance:
     nonSecurePort: ${server.port:9301}
