--- a/backend/facility-module/facility/src/main/resources/bootstrap.yml
+++ b/backend/facility-module/facility/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: facility.moserp.org
+    name: facility-module
 eureka:
   instance:
     nonSecurePort: ${server.port:9302}
