--- a/backend/inventory-module/inventory/src/main/resources/bootstrap.yml
+++ b/backend/inventory-module/inventory/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: inventory.moserp.org
+    name: inventory-module
 eureka:
   instance:
     nonSecurePort: ${server.port:9304}
