--- a/backend/order-module/order/src/main/resources/bootstrap.yml
+++ b/backend/order-module/order/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: order.moserp.org
+    name: order-module
 eureka:
   instance:
     nonSecurePort: ${server.port:9306}
