--- a/backend/product-module/product/src/main/resources/bootstrap.yml
+++ b/backend/product-module/product/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: product.moserp.org
+    name: product-module
 eureka:
   instance:
     nonSecurePort: ${server.port:9303}
