--- a/backend/sales-module/sales/src/main/resources/bootstrap.yml
+++ b/backend/sales-module/sales/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: sales.moserp.org
+    name: sales-module
 eureka:
   instance:
     nonSecurePort: ${server.port:9307}
