--- a/backend/customer-module/customer/src/main/resources/bootstrap.yml
+++ b/backend/customer-module/customer/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: customer.moserp.org
+    name: customer-module
 eureka:
   instance:
     nonSecurePort: ${server.port:9305}
