--- a/gui/inventory-web/package.json
+++ b/gui/inventory-web/package.json
@@ -42,6 +42,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
     "protractor": "^2.1.0",
-    "shelljs": "^0.2.6"
+    "shelljs": "^0.2.6",
+    "lite-server": "^1.3.4"
   }
 }
