--- a/gui/inventory-web/package.json
+++ b/gui/inventory-web/package.json
@@ -15,7 +15,6 @@
       "angular-aria": "github:angular/bower-angular-aria@^1.4.8",
       "angular-cookies": "npm:angular-cookies@1.4.8",
       "angular-messages": "github:angular/bower-angular-messages@^1.4.8",
-      "angular-oauth2": "github:seegno/angular-oauth2@3.0.1",
       "angular-schema-form": "npm:angular-schema-form@0.8.12",
       "angular-schema-form-bootstrap": "npm:angular-schema-form-bootstrap@^0.2.0",
       "angular-translate": "github:angular-translate/bower-angular-translate@^2.8.1",
@@ -27,6 +26,8 @@
       "css": "github:systemjs/plugin-css@^0.1.6",
       "jquery": "npm:jquery@2.1.4",
       "json": "github:systemjs/plugin-json@^0.1.0",
+      "ngstorage": "npm:ngstorage@^0.3.10",
+      "oauth-ng": "npm:oauth-ng@^0.4.5",
       "query-string": "npm:query-string@^3.0.0",
       "text": "github:systemjs/plugin-text@^0.0.2"
     },
