Backend: Added zuul filter for response links (uri and href) rewriting to only respond gateway server links. Adjusted ModuleRegistry to query discoveryClient for modules and retrieve resources dynamically.

--- a/backend/common/common-base/src/test/resources/application.properties
+++ b/backend/common/common-base/src/test/resources/application.properties
@@ -16,7 +16,8 @@
 
 # mongodb configuration
 spring.data.mongodb.uri=mongodb://localhost:27017/inttest
-environment.moserp.org.baseUri=http://localhost:8080/
-product.moserp.org.baseUri=http://localhost:8080/
-inventory.moserp.org.baseUri=http://localhost:8080/
-facility.moserp.org.baseUri=http://localhost:8080/
+environment-module.baseUri=http://localhost:8080/
+users.module=environment-module
+product-module.baseUri=http://localhost:8080/
+inventory-module.baseUri=http://localhost:8080/
+facility-module.baseUri=http://localhost:8080/
